# cmake-quickstart

./: .gitignore  .gitkeep  CMakeLists.txt  Makefile  README.md  arm-toolchain.cmake.example
libs/utils/: CMakeLists.txt
src/: main.c
